// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders with controls 1`] = `
.c0 {
  position: relative;
  width: 100%;
  overflow-x: auto;
}

.c3 {
  display: block;
  vertical-align: top;
  overflow-x: auto;
  overflow-y: hidden;
  width: 100%;
  height: 100%;
  white-space: nowrap;
  padding: 0;
  -webkit-overflow-scrolling: touch;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  -webkit-scroll-snap-type: proximity;
  -moz-scroll-snap-type: proximity;
  -ms-scroll-snap-type: proximity;
  scroll-snap-type: proximity;
  -webkit-scroll-snap-destination: 0 50%;
  -moz-scroll-snap-destination: 0 50%;
  -ms-scroll-snap-destination: 0 50%;
  scroll-snap-destination: 0 50%;
  -webkit-scroll-snap-points-x: repeat(100%);
  -moz-scroll-snap-points-x: repeat(100%);
  -ms-scroll-snap-points-x: repeat(100%);
  scroll-snap-points-x: repeat(100%);
}

.c3.c3 {
  margin-left: 0;
}

.c3::-webkit-scrollbar {
  width: 12px;
  height: 12px;
  cursor: pointer;
}

.c3::-webkit-scrollbar-thumb {
  background-color: transparent;
  background-clip: content-box;
  border-radius: 100px;
  border: 3px solid transparent;
}

.c3:hover::-webkit-scrollbar-thumb {
  background-color: #62676D;
}

.c4 {
  list-style-type: none;
  display: inline-block;
  vertical-align: top;
  -webkit-scroll-snap-coordinate: 0 0;
  -moz-scroll-snap-coordinate: 0 0;
  -ms-scroll-snap-coordinate: 0 0;
  scroll-snap-coordinate: 0 0;
}

.c4:before {
  position: absolute;
  content: "\\200B";
}

.c1 {
  padding: 0.75rem;
  vertical-align: middle;
  border-color: transparent;
  border-style: solid;
  border-width: 1px;
  border-radius: 100px;
  background-color: #8697A2;
  box-shadow: 0px 0px 8px rgba(0,0,0,0.25);
  color: #FFF;
  font-size: 0.875rem;
  line-height: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: absolute;
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform-origin: top center;
  -ms-transform-origin: top center;
  transform-origin: top center;
  z-index: 5;
}

.c1:last-child {
  left: auto;
  right: 0;
  -webkit-transform: rotate(180deg) translateY(-50%);
  -ms-transform: rotate(180deg) translateY(-50%);
  transform: rotate(180deg) translateY(-50%);
}

.c1:disabled,
.c1[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0.125rem 0.125rem #0CD664;
}

.c1::-moz-focus-inner {
  border: 0;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c5 {
  height: 12rem;
  width: 20rem;
  margin-right: 1rem;
  background: red;
}

.c6 {
  height: 12rem;
  width: 20rem;
  margin-right: 1rem;
  background: red;
}

.c7 {
  height: 12rem;
  width: 20rem;
  margin-right: 1rem;
  background: red;
}

@supports (-webkit-scroll-snap-align:start) or (-moz-scroll-snap-align:start) or (-ms-scroll-snap-align:start) or (scroll-snap-align:start) {
  .c3 {
    -webkit-scroll-snap-type: x mandatory;
    -moz-scroll-snap-type: x mandatory;
    -ms-scroll-snap-type: x mandatory;
    scroll-snap-type: x mandatory;
    -webkit-scroll-snap-destination: unset;
    -moz-scroll-snap-destination: unset;
    -ms-scroll-snap-destination: unset;
    scroll-snap-destination: unset;
    -webkit-scroll-snap-points-x: unset;
    -moz-scroll-snap-points-x: unset;
    -ms-scroll-snap-points-x: unset;
    scroll-snap-points-x: unset;
  }
}

@supports (-webkit-scroll-snap-align:start) or (-moz-scroll-snap-align:start) or (-ms-scroll-snap-align:start) or (scroll-snap-align:start) {
  .c4 {
    -webkit-scroll-snap-align: center;
    -moz-scroll-snap-align: center;
    -ms-scroll-snap-align: center;
    scroll-snap-align: center;
    -webkit-scroll-snap-coordinate: unset;
    -moz-scroll-snap-coordinate: unset;
    -ms-scroll-snap-coordinate: unset;
    scroll-snap-coordinate: unset;
  }
}

<div
  className="c0"
>
  <button
    className="c1"
  >
    <span
      className="c2"
    >
      Scroll Left
    </span>
  </button>
  <ul
    className="c3"
  >
    <li
      className="c4"
    >
      <div
        className="c5"
      />
    </li>
    <li
      className="c4"
    >
      <div
        className="c6"
      />
    </li>
    <li
      className="c4"
    >
      <div
        className="c7"
      />
    </li>
  </ul>
  <button
    className="c1"
  >
    <span
      className="c2"
    >
      Scroll Right
    </span>
  </button>
</div>
`;

exports[`Carousel renders without controls 1`] = `
.c0 {
  position: relative;
  width: 100%;
  overflow-x: auto;
}

.c1 {
  display: block;
  vertical-align: top;
  overflow-x: auto;
  overflow-y: hidden;
  width: 100%;
  height: 100%;
  white-space: nowrap;
  padding: 0;
  -webkit-overflow-scrolling: touch;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  -webkit-scroll-snap-type: proximity;
  -moz-scroll-snap-type: proximity;
  -ms-scroll-snap-type: proximity;
  scroll-snap-type: proximity;
  -webkit-scroll-snap-destination: 0 50%;
  -moz-scroll-snap-destination: 0 50%;
  -ms-scroll-snap-destination: 0 50%;
  scroll-snap-destination: 0 50%;
  -webkit-scroll-snap-points-x: repeat(100%);
  -moz-scroll-snap-points-x: repeat(100%);
  -ms-scroll-snap-points-x: repeat(100%);
  scroll-snap-points-x: repeat(100%);
}

.c1.c1 {
  margin-left: 0;
}

.c1::-webkit-scrollbar {
  width: 12px;
  height: 12px;
  cursor: pointer;
}

.c1::-webkit-scrollbar-thumb {
  background-color: transparent;
  background-clip: content-box;
  border-radius: 100px;
  border: 3px solid transparent;
}

.c1:hover::-webkit-scrollbar-thumb {
  background-color: #62676D;
}

.c2 {
  list-style-type: none;
  display: inline-block;
  vertical-align: top;
  -webkit-scroll-snap-coordinate: 0 0;
  -moz-scroll-snap-coordinate: 0 0;
  -ms-scroll-snap-coordinate: 0 0;
  scroll-snap-coordinate: 0 0;
}

.c2:before {
  position: absolute;
  content: "\\200B";
}

.c3 {
  height: 12rem;
  width: 20rem;
  margin-right: 1rem;
  background: red;
}

.c4 {
  height: 12rem;
  width: 20rem;
  margin-right: 1rem;
  background: red;
}

.c5 {
  height: 12rem;
  width: 20rem;
  margin-right: 1rem;
  background: red;
}

@supports (-webkit-scroll-snap-align:start) or (-moz-scroll-snap-align:start) or (-ms-scroll-snap-align:start) or (scroll-snap-align:start) {
  .c1 {
    -webkit-scroll-snap-type: x mandatory;
    -moz-scroll-snap-type: x mandatory;
    -ms-scroll-snap-type: x mandatory;
    scroll-snap-type: x mandatory;
    -webkit-scroll-snap-destination: unset;
    -moz-scroll-snap-destination: unset;
    -ms-scroll-snap-destination: unset;
    scroll-snap-destination: unset;
    -webkit-scroll-snap-points-x: unset;
    -moz-scroll-snap-points-x: unset;
    -ms-scroll-snap-points-x: unset;
    scroll-snap-points-x: unset;
  }
}

@supports (-webkit-scroll-snap-align:start) or (-moz-scroll-snap-align:start) or (-ms-scroll-snap-align:start) or (scroll-snap-align:start) {
  .c2 {
    -webkit-scroll-snap-align: center;
    -moz-scroll-snap-align: center;
    -ms-scroll-snap-align: center;
    scroll-snap-align: center;
    -webkit-scroll-snap-coordinate: unset;
    -moz-scroll-snap-coordinate: unset;
    -ms-scroll-snap-coordinate: unset;
    scroll-snap-coordinate: unset;
  }
}

<div
  className="c0"
>
  <ul
    className="c1"
  >
    <li
      className="c2"
    >
      <div
        className="c3"
      />
    </li>
    <li
      className="c2"
    >
      <div
        className="c4"
      />
    </li>
    <li
      className="c2"
    >
      <div
        className="c5"
      />
    </li>
  </ul>
</div>
`;
